[tool.poetry]
name = "NightShift"
version = "0.1.0"
description = "Copy cataloging bot"
authors = ["Tomasz Kalata <klingaroo@gmail.com>"]
license = "MIT"

readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pymarc = "^4.1.1"
SQLAlchemy = "^1.4.23"
PyYAML = "^5.4.1"
bookops-marc = {git = "https://github.com/BookOps-CAT/bookops-marc.git", rev = "0.4.0"}
psycopg2 = "^2.9.1"
bookops-worldcat = "^0.4.0"
loggly-python-handler = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.8b0"
pytest-cov = "^2.12.1"
pytest-mock = "^3.6.1"
mypy = "^0.910"
types-requests = "^2.25.9"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
(
    /(
        \.eggs
       | \.git
       | \.hg
       | \.mypy_cache
       | \.tox
       | \.venv
       | _build
       | buck-out
       | build
       | dist
    )/
    | temp.py
)
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
