[tool.poetry]
name = "NightShift"
version = "0.2.0"
description = "Copy cataloging bot"
authors = ["Tomasz Kalata <klingaroo@gmail.com>"]
license = "MIT"

readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pymarc = "^4.1.1"
SQLAlchemy = "^1.4.40"
PyYAML = "^6.0"
psycopg2 = "^2.9.3"
bookops-worldcat = "^0.5.0"
loggly-python-handler = "^1.0.1"
paramiko = "^2.11.0"
bookops-bpl-solr = {git = "https://github.com/BookOps-CAT/bookops-bpl-solr", rev = "v0.3.0"}
bookops-nypl-platform = {git = "https://github.com/BookOps-CAT/bookops-nypl-platform", rev = "v0.3.0"}
bookops-marc = {git = "https://github.com/BookOps-CAT/bookops-marc.git", rev = "0.8.1"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
pytest-cov = "^3.0.0"
pytest-mock = "^3.8.2"
mypy = "^0.971"
types-requests = "^2.28.8"
pytest-sftpserver = "^1.3.0"
types-paramiko = "^2.11.3"
coverage = {extras = ["toml"], version = "^6.3.1"}

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
(
    /(
        \.eggs
       | \.git
       | \.hg
       | \.mypy_cache
       | \.tox
       | \.venv
       | _build
       | buck-out
       | build
       | dist
    )/
    | temp.py
)
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
