[tool.poetry]
name = "NightShift"
version = "0.5.0"
description = "Copy cataloging bot"
authors = ["Tomasz Kalata <klingaroo@gmail.com>"]
license = "MIT"

readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pymarc = "^4.1.1"
SQLAlchemy = "^1.4.40"
PyYAML = "^6.0.1"
psycopg2 = "^2.9.3"
bookops-worldcat = "^0.5.0"
loggly-python-handler = "^1.0.1"
paramiko = "^3.4.0"
bookops-bpl-solr = {git = "https://github.com/BookOps-CAT/bookops-bpl-solr", rev = "v0.4.0"}
bookops-nypl-platform = {git = "https://github.com/BookOps-CAT/bookops-nypl-platform", rev = "v0.4.0"}
bookops-marc = {git = "https://github.com/BookOps-CAT/bookops-marc.git", rev = "0.8.1"}

[tool.poetry.dev-dependencies]
pytest = "^8.1.1"
black = "^24.3.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
mypy = "^1.9.0"
types-requests = "^2.31.0"
pytest-sftpserver = "^1.3.0"
types-paramiko = "^3.4.0"
coverage = {extras = ["toml"], version = "^6.3.1"}

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = 3.9
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "nightshift.datastore",
    "nightshift.datastore_transactions"
]
ignore_errors = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
